feat curso: listagem por filtro de datas