@@ -9,7 +9,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TurmaService {
@@ -22,9 +21,7 @@ public class TurmaService {
 
     public List<TurmaResponseForListByCursoTurmaDTO> listByCurso(int cursoId) throws Exception {
         List<Turma> turmas = this.cursoRepository.listByCurso(cursoId);
-        return turmas.stream()
-                .map(TurmaResponseForListByCursoTurmaDTO::new)
-                .collect(Collectors.toList());
+        return turmas.stream().map(TurmaResponseForListByCursoTurmaDTO::new).toList();
     }
 
     public void update(int turmaId, UpdateTurmaBodyDTO body) throws Exception {
